# pinball

./: .gitignore  a word about scaling.txt  decoupling, recoupling; the story of how pinball was made.txt  how to make decoupled pinball library.txt  how to make pinball game design very simple - first steps.txt  how to make pinball game design very simple - second steps.txt  how to make pinball game design very simple.txt  opengl pieces of puzzle.txt  sanity check 1.txt  sanity check 2.txt  shape definitions.txt
shared/: CMakeLists.txt  Camera.cpp  Camera.h  CameraEffect.h  Drawing.cpp  Drawing.h  Editor.cpp  Editor.h  Game.cpp  Game.h  LayoutItem.h  Material.h  Overlay.h  Part.h  Parts.h  Physics.cpp  Physics.cpp.orig  Physics.h  PhysicsDelegate.h  PinballBridgeInterface.h  PinballHostInterface.h  PinballNativeImplementation.h  PinballNativeInterface.h  Playfield.cpp  Playfield.h  Renderer.cpp  Renderer.h  Texture.h  TimerDelegate.h  Types.h  Util.cpp  Util.h  glfont2.cpp  glfont2.h
shared/Cosmos/: effects.lua  forces.lua  layout.lua  materials.lua  parts.lua  textures.lua  user.layout.lua
shared/Flipperfall/: camera.lua  forces.lua  layout.lua  objects.lua  rules.lua  user.layout.lua
shared/Pinferno/: camera.lua  forces.lua  layout.lua  parts.lua  rules.lua  textures.lua  user.layout.lua
shared/PorkyPinball/: config.lua  forces.lua  layout.lua  materials.lua  objects.lua  physics.lua  rules.lua
shared/Waterfall/: camera.lua  forces.lua  layout.lua  materials.lua  overlays.lua  rules.lua  textures.lua
shared/Waterfall2/: camera.lua  effects.lua  forces.lua  (+5 more)
(+494 files in other folders)
